infrastructure/terraform/main.tf
resource "aws_vpc" "cloudlearn_vpc" {
    cidr_block = "10.0.0.0/16"
    enable_dns_support = true
    enable_dns_hostnames = true


    tags = {
        Name = "${var.project_name}-vpc"
        Project = var.project_name
        Environment = var.environment
    }
    
}
