infrastructure/terraform/public_routes.tf
resource "aws_route_table" "public_route_table" {
  vpc_id = aws_vpc.cloudlearn_vpc.id


  route  {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.cloudlearn_igw.id
  }

  tags = {
    Name        = "${var.project_name}-public-route-table"
    Project     = var.project_name
    Environment = var.environment
    Tier        = "Public"

  }
}


resource "aws_route_table_association" "public_subnet_1_association" {
  subnet_id      = aws_subnet.public_subnet_1.id
  route_table_id = aws_route_table.public_route_table.id

}

resource "aws_route_table_association" "public_subnet_2_association" {
  subnet_id      = aws_subnet.public_subnet_2.id
  route_table_id = aws_route_table.public_route_table.id
}
